==========
Change log
==========

0.4 (unreleased)
================

- Nothing changed yet.


0.3 (2013-10-09)
================

- Fix tests in documentation + testing documentation now.

- Add new pseudonymizers:

  - ``.datestring``

  - ``.day``

  - ``.month``

  - ``.year``

- **Caution:** Due to changed implementation of the ``.date`` function it
  returns different values than in version 0.2.


0.2 (2013-09-06)
================

- ``.date`` does not return pseudonymized years smaller than `1900` anymore as
  ``datetime.date`` can not handle years smaller that `1900`.


0.1 (2013-09-05)
================

- Initial release.